[gd_scene load_steps=55 format=2]

[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_005.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_003.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_002.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_001.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_008.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_009.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_000.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_004.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_007.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_006.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_007.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_006.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_003.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_008.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_001.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_002.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_004.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_005.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_000.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_009.png" type="Texture" id=20]
[ext_resource path="res://Scripts/Characters/Knight.gd" type="Script" id=21]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_003.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_001.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_006.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_002.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_000.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_004.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_005.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_008.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_007.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_009.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_001.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_000.png" type="Texture" id=33]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_006.png" type="Texture" id=34]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_004.png" type="Texture" id=35]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_007.png" type="Texture" id=36]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_008.png" type="Texture" id=37]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_002.png" type="Texture" id=38]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_009.png" type="Texture" id=39]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_005.png" type="Texture" id=40]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_003.png" type="Texture" id=41]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_003.png" type="Texture" id=42]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_004.png" type="Texture" id=43]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_007.png" type="Texture" id=44]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_001.png" type="Texture" id=45]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_009.png" type="Texture" id=46]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_002.png" type="Texture" id=47]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_006.png" type="Texture" id=48]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_005.png" type="Texture" id=49]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_000.png" type="Texture" id=50]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_008.png" type="Texture" id=51]
[ext_resource path="res://Scenes/UI/CharacterUI.tscn" type="PackedScene" id=52]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 31 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 32 ), ExtResource( 38 ), ExtResource( 41 ), ExtResource( 35 ), ExtResource( 40 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 39 ) ],
"loop": false,
"name": "hurt",
"speed": 20.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 45 ), ExtResource( 47 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 49 ), ExtResource( 48 ), ExtResource( 44 ), ExtResource( 51 ), ExtResource( 46 ) ],
"loop": true,
"name": "move",
"speed": 15.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 20 ) ],
"loop": false,
"name": "dead",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 143.513, 235.234 )

[node name="Knight" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 21 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "attack"
frame = 9
playing = true

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( 14, -44 )
shape = SubResource( 2 )

[node name="Target" type="Position2D" parent="."]
position = Vector2( 306, 2 )

[node name="Tween" type="Tween" parent="."]

[node name="AttackCast" type="RayCast2D" parent="."]
cast_to = Vector2( 450, 0 )

[node name="CharacterUI" parent="." instance=ExtResource( 52 )]
margin_left = -154.544
margin_top = -415.358
margin_right = -154.544
margin_bottom = -415.358
rect_scale = Vector2( 0.8, 0.8 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
